# thread_safe

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
.github/workflows/: Clang.yml  GCC.yml  MSVC.yml  cmake-multi-platform.yml
docs/: annotated.html  annotated_dup.js  classes.html  classtrlc_1_1threadsafe_1_1Queue-members.html  classtrlc_1_1threadsafe_1_1Queue.html  classtrlc_1_1threadsafe_1_1Queue.js  classtrlc_1_1threadsafe_1_1Thread-members.html  classtrlc_1_1threadsafe_1_1Thread.html  classtrlc_1_1threadsafe_1_1Thread.js  classtrlc_1_1threadsafe_1_1Variable-members.html  classtrlc_1_1threadsafe_1_1Variable.html  classtrlc_1_1threadsafe_1_1Variable.js  classtrlc_1_1threadsafe_1_1Wait-members.html  classtrlc_1_1threadsafe_1_1Wait.html  classtrlc_1_1threadsafe_1_1Wait.js  common_8hpp_source.html  dir_3059ba502c71c30b71b87c0995c87693.html  dir_3059ba502c71c30b71b87c0995c87693.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_b092e8ceebccd755e3476b4422d27f53.html  dir_b092e8ceebccd755e3476b4422d27f53.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  functions.html  functions_enum.html  functions_func.html  functions_vars.html  graph_legend.html  index.html  navtreedata.js  navtreeindex0.js  queue_8hpp_source.html  structtrlc_1_1threadsafe_1_1Queue_1_1Settings-members.html  structtrlc_1_1threadsafe_1_1Queue_1_1Settings.html  structtrlc_1_1threadsafe_1_1Queue_1_1Settings.js  thread_8hpp_source.html  variable_8hpp_source.html  wait_8hpp_source.html
docs/html/: annotated.html  annotated_dup.js  classThreadSafe_1_1Queue-members.html  classThreadSafe_1_1Queue.html  classThreadSafe_1_1Queue.js  classThreadSafe_1_1Thread-members.html  classThreadSafe_1_1Thread.html  classThreadSafe_1_1Thread.js  classThreadSafe_1_1Variable-members.html  classThreadSafe_1_1Variable.html  classThreadSafe_1_1Variable.js  classThreadSafe_1_1Wait-members.html  classThreadSafe_1_1Wait.html  classThreadSafe_1_1Wait.js  classes.html  common_8hpp_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d3317812d79959b1c3e67c613030e1ea.html  dir_d3317812d79959b1c3e67c613030e1ea.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  functions.html  functions_enum.html  functions_func.html  functions_vars.html  graph_legend.html  index.html  menudata.js  navtreedata.js  navtreeindex0.js  queue_8hpp_source.html  structThreadSafe_1_1Queue_1_1Settings-members.html  structThreadSafe_1_1Queue_1_1Settings.html  structThreadSafe_1_1Queue_1_1Settings.js  structThreadSafe_1_1Trait_1_1ThreadResultCallbackType-members.html  structThreadSafe_1_1Trait_1_1ThreadResultCallbackType.html  structThreadSafe_1_1Trait_1_1ThreadResultCallbackType.js  structThreadSafe_1_1Trait_1_1ThreadResultCallbackType_3_01void_01_4-members.html  structThreadSafe_1_1Trait_1_1ThreadResultCallbackType_3_01void_01_4.html  (+4 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  (+9 more)
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  (+9 more)
example/: CMakeLists.txt  queue_example.cpp  thread_example.cpp  variable_example.cpp  wait_example.cpp
include/thread_safe/: common.hpp  queue.hpp  thread.hpp  variable.hpp  wait.hpp
include/trlc/threadsafe/: common.hpp  queue.hpp  thread.hpp  variable.hpp  wait.hpp
src/: CMakeLists.txt  thread.cpp  wait.cpp
tests/: CMakeLists.txt  thread_safe_queue_test.cpp  thread_safe_thread_test.cpp  thread_safe_variable_test.cpp  thread_safe_wait_test.cpp
